Made css change to make logo visible when navigation bar is fixed.

--- a/24 - Sticky Nav/style-START.css
+++ b/24 - Sticky Nav/style-START.css
@@ -14,6 +14,11 @@ body.fixed-nav nav {
   box-shadow: 0 5px rgba(0, 0, 0, 0.1);
 }
 
+body.fixed-nav li.logo {
+  max-width: 500px;
+  transform: scale(1);
+}
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
